[gd_scene load_steps=71 format=3 uid="uid://crjay8kxraspw"]

[ext_resource type="Script" path="res://scenes/enemies/termite_queen.gd" id="1_bhhtr"]
[ext_resource type="PackedScene" uid="uid://c6rpcdc0wlwaw" path="res://scenes/enemies/egg.tscn" id="2_f2pny"]
[ext_resource type="Texture2D" uid="uid://brhvm7uq8lbw7" path="res://assets/sprites/termite-queen/queen-thorax-idle.png" id="2_f28vk"]
[ext_resource type="Texture2D" uid="uid://rnhk5qr1w2ng" path="res://assets/sprites/termite-queen/queen-thorax-explode.png" id="3_lhcbm"]
[ext_resource type="Script" path="res://scenes/player/gun/gun_pivot.gd" id="4_geo7a"]
[ext_resource type="PackedScene" uid="uid://b0qmwspjwr53p" path="res://scenes/enemies/termite_queen_gun.tscn" id="4_to4q0"]
[ext_resource type="PackedScene" uid="uid://b6xwdcloo2sce" path="res://scenes/bullet_emitter/bullet_emitter.tscn" id="5_wjtyb"]
[ext_resource type="PackedScene" uid="uid://daptjvsjukjef" path="res://scenes/enemies/termite_bullet.tscn" id="6_wc31g"]
[ext_resource type="PackedScene" uid="uid://b7ev8rk7l185t" path="res://scenes/player/gun/muzzle.tscn" id="7_mqtgx"]
[ext_resource type="Script" path="res://scenes/entity_composition/health_component.gd" id="9_7jpxo"]
[ext_resource type="Texture2D" uid="uid://dgi45htgh7aag" path="res://assets/sprites/termite-queen/eye.png" id="9_a7eaq"]
[ext_resource type="AudioStream" uid="uid://bhk161jw61g0m" path="res://assets/Audio/SFX/MedusaAttack.wav" id="12_2cucj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8unhr"]
atlas = ExtResource("3_lhcbm")
region = Rect2(0, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi4cg"]
atlas = ExtResource("3_lhcbm")
region = Rect2(700, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg25c"]
atlas = ExtResource("3_lhcbm")
region = Rect2(1400, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_bds8v"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2100, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7xlo"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2800, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_je3q2"]
atlas = ExtResource("3_lhcbm")
region = Rect2(3500, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awef"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4200, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l0ap"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4900, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_q07ew"]
atlas = ExtResource("3_lhcbm")
region = Rect2(5600, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_e04k8"]
atlas = ExtResource("3_lhcbm")
region = Rect2(6300, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1on1"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7000, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw80p"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7700, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_x44b7"]
atlas = ExtResource("3_lhcbm")
region = Rect2(8400, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdfia"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9100, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_hploo"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9800, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_f13kt"]
atlas = ExtResource("3_lhcbm")
region = Rect2(0, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5m5n"]
atlas = ExtResource("3_lhcbm")
region = Rect2(700, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oa51"]
atlas = ExtResource("3_lhcbm")
region = Rect2(1400, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pk7g"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2100, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_puf70"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2800, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_dimpv"]
atlas = ExtResource("3_lhcbm")
region = Rect2(3500, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_poopc"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4200, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny0ta"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4900, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_536nr"]
atlas = ExtResource("3_lhcbm")
region = Rect2(5600, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_em6lh"]
atlas = ExtResource("3_lhcbm")
region = Rect2(6300, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwf2n"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7000, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyt5v"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7700, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv0ya"]
atlas = ExtResource("3_lhcbm")
region = Rect2(8400, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd07y"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9100, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ksi"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9800, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilgv7"]
atlas = ExtResource("3_lhcbm")
region = Rect2(10500, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_a55mn"]
atlas = ExtResource("3_lhcbm")
region = Rect2(11200, 800, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_78dvn"]
atlas = ExtResource("3_lhcbm")
region = Rect2(0, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4f5e"]
atlas = ExtResource("3_lhcbm")
region = Rect2(700, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6non"]
atlas = ExtResource("3_lhcbm")
region = Rect2(1400, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhlmb"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2100, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_uud71"]
atlas = ExtResource("3_lhcbm")
region = Rect2(2800, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox04q"]
atlas = ExtResource("3_lhcbm")
region = Rect2(3500, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vlvo"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4200, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkur"]
atlas = ExtResource("3_lhcbm")
region = Rect2(4900, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktuao"]
atlas = ExtResource("3_lhcbm")
region = Rect2(5600, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ay56"]
atlas = ExtResource("3_lhcbm")
region = Rect2(6300, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw7b"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7000, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ovl"]
atlas = ExtResource("3_lhcbm")
region = Rect2(7700, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy43l"]
atlas = ExtResource("3_lhcbm")
region = Rect2(8400, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_lerq6"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9100, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf0ax"]
atlas = ExtResource("3_lhcbm")
region = Rect2(9800, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_mualh"]
atlas = ExtResource("3_lhcbm")
region = Rect2(10500, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7k0"]
atlas = ExtResource("3_lhcbm")
region = Rect2(11200, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2mko"]
atlas = ExtResource("3_lhcbm")
region = Rect2(11900, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmi56"]
atlas = ExtResource("3_lhcbm")
region = Rect2(12600, 1600, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxhg"]
atlas = ExtResource("2_f28vk")
region = Rect2(0, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ot7"]
atlas = ExtResource("2_f28vk")
region = Rect2(700, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_57bgj"]
atlas = ExtResource("2_f28vk")
region = Rect2(1400, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgmu1"]
atlas = ExtResource("2_f28vk")
region = Rect2(2100, 0, 700, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd0np"]
atlas = ExtResource("2_f28vk")
region = Rect2(2800, 0, 700, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4dh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8unhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi4cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg25c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bds8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7xlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je3q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l0ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q07ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e04k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1on1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw80p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x44b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdfia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hploo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f13kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5m5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oa51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pk7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puf70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dimpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny0ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_536nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em6lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwf2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyt5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv0ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd07y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilgv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a55mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78dvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4f5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6non")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhlmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uud71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox04q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vlvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktuao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ay56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy43l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lerq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf0ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mualh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2mko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmi56")
}],
"loop": false,
"name": &"explode",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ot7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgmu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd0np")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dxkp"]
radius = 70.5762

[node name="TermiteQueen" type="Node2D" node_paths=PackedStringArray("emitters", "egg_muzzles")]
script = ExtResource("1_bhhtr")
egg_scene = ExtResource("2_f2pny")
emitters = [NodePath("GunPivot/Emitters/BulletEmitter"), NodePath("GunPivot/Emitters/BulletEmitter2"), NodePath("GunPivot/Emitters/BulletEmitter3"), NodePath("GunPivot/Emitters/BulletEmitter4"), NodePath("GunPivot/Emitters/BulletEmitter5"), NodePath("GunPivot/Emitters/BulletEmitter6"), NodePath("GunPivot/Emitters/BulletEmitter7"), NodePath("GunPivot/Emitters/BulletEmitter8"), NodePath("GunPivot/Emitters/BulletEmitter9"), NodePath("GunPivot/Emitters/BulletEmitter10"), NodePath("GunPivot/Emitters/BulletEmitter11"), NodePath("GunPivot/Emitters/BulletEmitter12")]
egg_muzzles = [NodePath("GunPivot/EggMuzzles/BulletSpawner"), NodePath("GunPivot/EggMuzzles/BulletSpawner2"), NodePath("GunPivot/EggMuzzles/BulletSpawner3"), NodePath("GunPivot/EggMuzzles/BulletSpawner4"), NodePath("GunPivot/EggMuzzles/BulletSpawner5")]

[node name="Model" type="Node2D" parent="."]

[node name="Thorax" type="AnimatedSprite2D" parent="Model"]
position = Vector2(108, -302)
sprite_frames = SubResource("SpriteFrames_c4dh1")
animation = &"explode"
offset = Vector2(-98, -90)

[node name="GunPivot" type="Node2D" parent="."]
script = ExtResource("4_geo7a")

[node name="TermiteQueenGun" parent="GunPivot" instance=ExtResource("4_to4q0")]

[node name="Emitters" type="Node2D" parent="GunPivot"]
position = Vector2(134.06, 0)

[node name="BulletEmitter" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter2" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 0.523599
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter3" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 1.0472
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter4" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 1.5708
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter5" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 2.0944
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter6" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 2.61799
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter7" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 3.14159
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter8" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 3.66519
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter9" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 4.18879
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter10" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 4.71239
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter11" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 5.23599
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="BulletEmitter12" parent="GunPivot/Emitters" instance=ExtResource("5_wjtyb")]
rotation = 5.75959
number_of_bullets = 15
bullet_packed_scene = ExtResource("6_wc31g")

[node name="EggMuzzles" type="Node2D" parent="GunPivot"]

[node name="BulletSpawner" parent="GunPivot/EggMuzzles" instance=ExtResource("7_mqtgx")]

[node name="BulletSpawner2" parent="GunPivot/EggMuzzles" instance=ExtResource("7_mqtgx")]
rotation = 0.523599

[node name="BulletSpawner3" parent="GunPivot/EggMuzzles" instance=ExtResource("7_mqtgx")]
rotation = -0.523599

[node name="BulletSpawner4" parent="GunPivot/EggMuzzles" instance=ExtResource("7_mqtgx")]
rotation = 1.0472

[node name="BulletSpawner5" parent="GunPivot/EggMuzzles" instance=ExtResource("7_mqtgx")]
rotation = -1.0472

[node name="Area2D" type="Area2D" parent="GunPivot"]
position = Vector2(92, -4)
collision_layer = 128
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunPivot/Area2D"]
rotation = 3.11016
shape = SubResource("CircleShape2D_5dxkp")

[node name="LeftEye" type="Sprite2D" parent="GunPivot"]
z_index = 2
position = Vector2(107, -52)
rotation = -2.09236
texture = ExtResource("9_a7eaq")

[node name="RightEye" type="Sprite2D" parent="GunPivot"]
z_index = 2
position = Vector2(102, 44)
rotation = -2.09236
texture = ExtResource("9_a7eaq")

[node name="StreamTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BlastWaveTimer" type="Timer" parent="."]
one_shot = true

[node name="EggWaveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("9_7jpxo")

[node name="ExplosionDelayForHeadTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionTotalTimeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Scream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_2cucj")

[connection signal="area_entered" from="GunPivot/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="StreamTimer" to="." method="_on_stream_timer_end"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
[connection signal="timeout" from="BlastWaveTimer" to="." method="_on_blast_wave_timer_timeout"]
[connection signal="timeout" from="EggWaveTimer" to="." method="_on_egg_wave_timer_timeout"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
